--- a/QuizAppV2/src/main/resources/com/dht/quizappv2/questions.fxml
+++ b/QuizAppV2/src/main/resources/com/dht/quizappv2/questions.fxml
@@ -42,7 +42,12 @@
       </VBox>
       <Button mnemonicParsing="false" onAction="#addChoice" styleClass="Button" text="Thêm lựa chọn" />
       <Button mnemonicParsing="false" onAction="#addQuestion" style="-fx-background-color: red;" styleClass="Button" text="Thêm câu hỏi" />
-      <TextField fx:id="txtSearch" promptText="Tìm câu hỏi..." />
+      <HBox styleClass="Main">
+         <children>
+            <TextField fx:id="txtSearch" promptText="Tìm câu hỏi..." />
+            <ComboBox fx:id="cbSearchCates" prefWidth="150.0" />
+         </children>
+      </HBox>
       <TableView fx:id="tbQuestions" prefHeight="200.0" prefWidth="200.0" />
    </children>
 </VBox>
